--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="cerrar_sesion">Cerrar Sesión</string>
     <string name="contra_usuario2">Repetir Contraseña</string>
     <string name="title_activity_scroll">ScrollActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="registrar_usuario">Registrar Usuario</string>
+    <string name="guardar_usuario">Guardar</string>
+    <string name="titulo_registro_usuario">Registrar Usuario</string>
 </resources>
