Detalles de Contactos en desarrollo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="ver_informes">Ver informes</string>
     <string name="estadisticas">Estadísticas</string>
     <string name="descripcion_est">Visualizar las estadísitcas de la Agenda.</string>
+    <string name="fecha_registro">Fecha Registro</string>
+    <string name="registro_datos">Datos de Registro</string>
+    <string name="admin_registro">Admin que registró</string>
 </resources>
